--- a/lib/mixins.scss
+++ b/lib/mixins.scss
@@ -5,6 +5,7 @@ $transitionSpeed: 0.3s ease;
 
 @import 'components/fo_file_upload/mixins';
 @import 'components/fo_image_file/mixins';
+@import 'components/fo_dropdown_select_multi/mixins';
 
 @mixin foregroundColor($color) {
   color: $color;
@@ -28,9 +29,11 @@ $transitionSpeed: 0.3s ease;
 
   @include material-checkbox-color($primaryColor);
   @include material-radio-color($primaryColor);
+  @include fo-dropdown-select-multi-option-background-color($primaryColor);
 
   @include fo-file-upload-border-color($grayColor);
   @include fo-image-file-border-color($grayColor);
+  @include fo-dropdown-select-multi-options-border-color($grayColor);
 
   material-spinner {
     border-color: $primaryColor;
