FoImageMap now uses inhouse multiselect

--- a/lib/components/fo_image_map/fo_image_map_component.scss
+++ b/lib/components/fo_image_map/fo_image_map_component.scss
@@ -4,6 +4,9 @@
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  img {
+    width: 100%;
+  }
   svg {
     position: absolute;
     top: 0;
