allround fixes for multiSelect comp

--- a/lib/components/fo_dropdown_select_multi/fo_dropdown_select_multi_component.html
+++ b/lib/components/fo_dropdown_select_multi/fo_dropdown_select_multi_component.html
@@ -2,7 +2,7 @@
                     [options]="filteredOptions"
                     [disabled]="disabled"
                     [actionButtonLabel]="msgAdd | capitalize"
-                    (actionButtonTrigger)="onAddSelected()"
+                    (actionButtonTrigger)="onAdd(selectedId)"
                     [(selectedId)]="selectedId"></fo-dropdown-select>
 <div id="selectedOptions">
   <ul>
