--- a/lib/components/fo_number_input/fo_number_input_component.html
+++ b/lib/components/fo_number_input/fo_number_input_component.html
@@ -14,6 +14,7 @@
                  centerValue
                  [attr.tabindex]="tabIndex"
                  [disabled]="disabled"
+                 [options]="options"
                  [ngModel]="value?.toString()"
                  (blur)="onInputBlur($event)"
                  (ngModelChange)="setValueClamped($event)"></fo-text-input>
