--- a/lib/components/fo_notification/fo_notification_component.html
+++ b/lib/components/fo_notification/fo_notification_component.html
@@ -1,10 +1,11 @@
 <div *ngIf="isOpen"
      id="notificationContainer">
   <h2 class="overflowEllipsis margin-top-medium margin-bottom-none"> {{header}} <fo-button
-               *ngIf="showCloseButton == true"               
+               *ngIf="showCloseButton == true"
                dense
                clearSize
-               white               
+               noHover
+               white
                icon="close"
                (trigger)="close()">
     </fo-button>
