--- a/lib/components/fo_panel/fo_panel_component.html
+++ b/lib/components/fo_panel/fo_panel_component.html
@@ -1,14 +1,14 @@
-<div id="foPanel" *ngIf="visible">
+<div id="foPanel"
+     *ngIf="visible">
   <div id="panelHeader">
-    <h3>{{title | capitalize}}</h3>
-    <material-button dense
-                     clear-size
-                     baseline
-                     (trigger)="onClose()">
-      <material-icon icon="close"
-                     size="large">
-      </material-icon>
-    </material-button>
+    <h3>{{header | capitalize}}</h3>
+    <fo-button dense
+               white
+               noHover
+               clearSize
+               icon="close"
+               (trigger)="onClose()">
+    </fo-button>
   </div>
   <ng-content></ng-content>
 </div>
