--- a/lib/components/fo_quiz/fo_question_component.html
+++ b/lib/components/fo_quiz/fo_question_component.html
@@ -1,36 +1,33 @@
-<div class="flex-container">
-    <div class="flex-left"
-         [class.transition]="transition"
-         [class.is-hidden]="leftHidden">
-        <p class="question margin-bottom-none">{{model.label}}</p>
+<div class="container">
+  <div class="questionContainer"
+       [class.transition]="transition"
+       [class.is-hidden]="leftHidden">
+    <p class="question">{{model.label}}</p>
+  </div>
+  <div class="answerContainer"
+       [class.transition]="transition"
+       [class.is-hidden]="rightHidden">
+    <div class="answer">
+      <fo-option *ngFor="let option of model.options"
+                 [model]="option"
+                 [disabled]="disabled"
+                 [buttonColor]="buttonColor"
+                 (trigger)="onOptionTrigger($event)"></fo-option>
     </div>
-    <div class="flex-right"
-         [class.transition]="transition"
-         [class.is-hidden]="rightHidden">
-        <div class="answer">
-            <fo-option *ngFor="let option of model.options.reversed"
-                       [model]="option"
-                       [disabled]="disabled"
-                       [buttonColor]="buttonColor"
-                       (trigger)="onOptionTrigger($event)"></fo-option>
-        </div>
-    </div>
+  </div>
 </div>
-
 <fo-quiz *ngIf="currentChildQuiz != null"
          [disabled]="disabled"
          [model]="currentChildQuiz"
          (done)="onChildQuizDone($event)">
 </fo-quiz>
-
-<div class="row margin-top-medium"
+<div id="nextButtonContainer"
      *ngIf="model.multiSelect == true && currentChildQuiz == null">
-    <div class="col text-center">
-        <material-button clear-size
-                         [disabled]="selectedOptions.isEmpty"
-                         (trigger)="onNextTrigger()">
-            <material-icon icon="keyboard_arrow_down">
-            </material-icon>
-        </material-button>
-    </div>
+  <fo-button clearSize
+             dense
+             white             
+             icon="keyboard_arrow_down"
+             [disabled]="selectedOptions.isEmpty"
+             (trigger)="onNextTrigger()">
+  </fo-button>
 </div>
