--- a/lib/components/fo_carousel/fo_carousel_component.html
+++ b/lib/components/fo_carousel/fo_carousel_component.html
@@ -7,6 +7,7 @@
        *ngIf="showRadioButtons == true">
     <material-radio-group class="no-left-margin">
       <material-radio *ngFor="let slide of slides; let i=index"
+                      [disabled]="disabled"
                       [checked]="step == i"
                       (checkedChange)="onButtonChange(i, $event)"></material-radio>
     </material-radio-group>
@@ -18,6 +19,7 @@
       <fo-button clearSize
                  white
                  noHover
+                 [disabled]="disabled"
                  (trigger)="stepBy(-1)"
                  icon="keyboard_arrow_left">
       </fo-button>
@@ -29,6 +31,7 @@
                  white
                  noHover
                  icon="keyboard_arrow_right"
+                 [disabled]="disabled"
                  (trigger)="stepBy(1)">
       </fo-button>
     </div>
