--- a/lib/components/fo_rating/fo_rating_component.scss
+++ b/lib/components/fo_rating/fo_rating_component.scss
@@ -1,10 +1,17 @@
 :host {
-  user-select: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  
-  material-icon {
-    cursor: pointer;
+  div#ratingContainer {
+    user-select: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+
+    material-icon {
+      cursor: pointer;
+    }
   }
+  div#ratingContainer.disabled {
+    opacity: 0.5;
+  }
+
+
 }
