removed z-index from data-table and focusShadow on filter

--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -13,6 +13,7 @@
     <fo-text-input class="text-left margin-bottom-x-small"
                    [disabled]="disabled"
                    dense
+                   noFocusShadow
                    [label]="msgFilter | capitalize"
                    trailingGlyph="search"
                    [(ngModel)]="searchPhrase"
