--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -6,6 +6,7 @@
                    [icon]="leadingIcon"></material-icon>
     <input class="roundLeft gray-color-bright"
            #input
+           type="{{type}}"
            [autoFocus]="autoFocus"
            [disabled]="disabled == true"
            [placeholder]="placeholder"           
