hide null option if filter isn't empty

--- a/lib/components/fo_dropdown_list/fo_dropdown_list_component.html
+++ b/lib/components/fo_dropdown_list/fo_dropdown_list_component.html
@@ -16,7 +16,7 @@
                      (ngModelChange)="updateFilteredOptions($event)">
       </fo-text-input>
     </div>
-    <div *ngIf="allowNullSelection">
+    <div *ngIf="allowNullSelection && filter?.isEmpty != false">
       <fo-dropdown-option [model]="nullOption"
                           (click)="onSelect($event, nullOption)"></fo-dropdown-option>
     </div>
