ActionButton now disabled if value is empty

--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -28,7 +28,7 @@
     <fo-button *ngIf="actionButtonLabel != null"
                [label]="actionButtonLabel"
                noLeftBorder
-               [disabled]="disabled || control?.valid == false"
+               [disabled]="disabled || control?.valid == false || value?.isEmpty != false"
                (trigger)="actionButtonController?.add($event)"></fo-button>
   </div>
   <fo-error-output *ngIf="hasFocus == true && errorMessage != null && control?.pristine != true && dropdownVisible == false"
