--- a/lib/components/fo_button/_mixins.scss
+++ b/lib/components/fo_button/_mixins.scss
@@ -7,6 +7,11 @@
       @include material-icon-size($size * 1.5 !important);
     }
   }
+  ::ng-deep fo-button[dense] {
+    button.themeable {
+      @include material-icon-size($size !important);
+    }
+  }
 }
 
 @mixin fo-button-colors($color, $backgroundColor, $backgroundColorhover, $backgroundColorDisabled) {  
