actionButton trigger on enter

--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -17,9 +17,9 @@
            [ngModel]="value"
            (ngModelChange)="onValueChange($event)"           
            (change)="changeController.add($event)"
+           (keyup)="onKeyUp($event)"
            (focus)="onFocus($event)"
-           (blur)="onBlur($event)"
-           type="text">           
+           (blur)="onBlur($event)">            
     <material-icon *ngIf="clearIcon == true && value?.isEmpty == false"
                    size="large"
                    class="color-alert clear"
