--- a/lib/components/fo_dropdown_select/fo_dropdown_select_component.html
+++ b/lib/components/fo_dropdown_select/fo_dropdown_select_component.html
@@ -22,6 +22,7 @@
 <fo-dropdown-list *ngIf="options != null && dropdownVisible == true && disabled != true"
                   [options]="options"
                   [showSearch]="showSearch"
+                  [constrainToViewPort]="constrainToViewPort"
                   [allowNullSelection]="allowNullSelection"
                   [width]="dropdownWidth"
                   (select)="onSelect($event)"
