--- a/lib/components/fo_dropdown_select_multi/fo_dropdown_select_multi_component.html
+++ b/lib/components/fo_dropdown_select_multi/fo_dropdown_select_multi_component.html
@@ -3,6 +3,7 @@
                     [disabled]="disabled"
                     [showSearch]="showSearch"
                     [actionButtonLabel]="msgAdd | capitalize"
+                    [constrainToViewPort]="constrainToViewPort"
                     (actionButtonTrigger)="onAdd(selectedId)"
                     [(selectedId)]="selectedId"></fo-dropdown-select>
 <div id="selectedOptions">
